# comptime

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.sh
include/fxl/comptime/: rational.hxx
